cmake_minimum_required(VERSION 3.18.0)
project(crack-attack LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_compile_options(-Wall -Wpedantic)
endif()
add_executable(crack-attack main.cpp cell.h  jeu.h viseur.h grid.h cell.cpp  jeu.cpp viseur.cpp grid.cpp)
